--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <div class="main-content">
                     <div class="info">
                         <div class="hero-content">
-                            <p class="sub-title">😎 EASY LEAENING PLATFORM</p>
+                            <p class="group">😎 EASY LEAENING PLATFORM</p>
                             <h1 class="title">Words learner come here.</h1>
-                            <p class="desc">
+                            <p class="desc text-desc">
                                 Build skills with courses, certificates, and get
                                 online knowledge from our
                                 <span style="white-space: nowrap"
@@ -146,8 +146,60 @@
             <!-- Feature -->
             <div class="feature">
                 <div class="main-content">
-                    
+                    <div class="header">
+                        <p class="group">F E A T U R E S</p>
+                        <h2 class="feature-title">
+                            We are providing suitable features for students.
+                        </h2>
+                        <p class="desc text-desc">
+                            Read our awesome feature that is absolutely suit for
+                            you. Explore the feature and know the best.
+                        </p>
+                    </div>
+                    <div class="selection">
+                        <ul class="list">
+                            <li class="item">
+                                <img
+                                    src="./assets/img/icon-feature-1.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                                <h3 class="title">Live Class</h3>
+                                <p class="desc-lv1">
+                                    We are providing live classes with the best
+                                    teacher for you
+                                </p>
+                            </li>
+                            <li class="item">
+                                <img
+                                    src="./assets/img/icon-feature-2.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                                <h3 class="title">Discuss</h3>
+                                <p class="desc-lv1">
+                                    Conversation with teachers or another
+                                    students about task or any other thing
+                                </p>
+                            </li>
+                            <li class="item">
+                                <img
+                                    src="./assets/img/icon-feature-3.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                                <h3 class="title">Task</h3>
+                                <p class="desc-lv1">
+                                    We give every of our students task for
+                                    gathering knowledge at home
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </div>
+            <div class="course">
+                <div class="main-content"></div>
             </div>
         </main>
     </body>
