--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="main-content">
                     <div class="header">
                         <p class="group">F E A T U R E S</p>
-                        <h2 class="feature-title">
+                        <h2 class="feature-title title-lv2">
                             We are providing suitable features for students.
                         </h2>
                         <p class="desc text-desc">
@@ -164,7 +164,7 @@
                                     alt=""
                                     class="icon"
                                 />
-                                <h3 class="title">Live Class</h3>
+                                <h3 class="item-title title-lv3">Live Class</h3>
                                 <p class="desc-lv1">
                                     We are providing live classes with the best
                                     teacher for you
@@ -176,7 +176,7 @@
                                     alt=""
                                     class="icon"
                                 />
-                                <h3 class="title">Discuss</h3>
+                                <h3 class="item-title title-lv3">Discuss</h3>
                                 <p class="desc-lv1">
                                     Conversation with teachers or another
                                     students about task or any other thing
@@ -188,7 +188,7 @@
                                     alt=""
                                     class="icon"
                                 />
-                                <h3 class="title">Task</h3>
+                                <h3 class="item-title title-lv3">Task</h3>
                                 <p class="desc-lv1">
                                     We give every of our students task for
                                     gathering knowledge at home
@@ -199,7 +199,85 @@
                 </div>
             </div>
             <div class="course">
-                <div class="main-content"></div>
+                <div class="main-content">
+                    <p class="group">C O U R S E S</p>
+                    <h2 class="course-title title-lv2">Popular Courses</h2>
+                    <div class="intro">
+                        <div class="course-desc text-desc">
+                            Check out our most poular courses that suit for you.
+                            Here you can find your favourite one.
+                        </div>
+                        <a href="" class="cta-btn">View All Courses</a>
+                    </div>
+                    <ul class="course-list">
+                        <li class="item">
+                            <img
+                                src="./assets/img/course-1.jpeg"
+                                alt="Web Design"
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <div class="wrap-item">
+                                    <h3 class="title-item">Web Design</h3>
+                                    <p class="price">
+                                        Fee <strong>$200</strong>
+                                    </p>
+                                    <p class="desc">
+                                        Web design basic to higer level
+                                    </p>
+                                    <div class="info-item">
+                                        <p class="info-text">40 Classes</p>
+                                        <p class="info-text">3 Months</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./assets/img/course-2.jpeg"
+                                alt="Web Design"
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <div class="wrap-item">
+                                    <h3 class="title-item">Web Development</h3>
+                                    <p class="price">
+                                        Fee <strong>$250</strong>
+                                    </p>
+                                    <p class="desc">
+                                        Web development basic to higer level
+                                    </p>
+                                    <div class="info-item">
+                                        <p class="info-text">30 Classes</p>
+                                        <p class="info-text">3 Months</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./assets/img/course-3.jpeg"
+                                alt="Web Design"
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <div class="wrap-item">
+                                    <h3 class="title-item">UI/UX Design</h3>
+                                    <p class="price">
+                                        Fee <strong>$350</strong>
+                                    </p>
+                                    <p class="desc">
+                                        UI/UX design basic to higer level
+                                    </p>
+                                    <div class="info-item">
+                                        <p class="info-text">50 Classes</p>
+                                        <p class="info-text">4 Months</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </main>
     </body>
