write qty and feedback code 50%

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Course -->
             <div class="course">
                 <div class="main-content">
                     <p class="group">C O U R S E S</p>
@@ -277,6 +278,86 @@
                             </div>
                         </li>
                     </ul>
+                    <div class="qty">
+                        <div class="qty-item">
+                            <strong>100+</strong>
+                            <p class="text-desc">Popular Courses</p>
+                        </div>
+                        <div class="qty-item">
+                            <strong>500+</strong>
+                            <p class="text-desc">Skilled Trainer</p>
+                        </div>
+                        <div class="qty-item">
+                            <strong>1M+</strong>
+                            <p class="text-desc">Student Learning</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- feedback -->
+            <div class="feedback">
+                <div class="main-content">
+                    <div class="wrap-feedback">
+                        <img
+                            class="icon-quote"
+                            src="./assets/img/icon-quote.svg"
+                            alt="quote"
+                        />
+                        <blockquote>
+                            “They are the best people. And this is the suitable
+                            platform to learn from distance.”
+                        </blockquote>
+                        <p class="info-member">
+                            <span class="name">Ben Foakes,</span>
+                            &nbsp;student.
+                        </p>
+                        <div class="action">
+                            <a href="#!" class="feedback-btn">
+                                <img
+                                    src="./assets/img/icon-back.svg"
+                                    alt="button back"
+                                />
+                            </a>
+                            <a href="#!" class="feedback-btn">
+                                <img
+                                    src="./assets/img/icon-next.svg"
+                                    alt="button next"
+                                />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="feedback-avatar">
+                        <img
+                            src="./assets/img/avatar/5.jpeg"
+                            alt=""
+                            class="avatar"
+                        />
+                        <img
+                            src="./assets/img/avatar/6.jpeg"
+                            alt=""
+                            class="avatar"
+                        />
+                        <img
+                            src="./assets/img/avatar/7.jpeg"
+                            alt=""
+                            class="avatar"
+                        />
+                        <img
+                            src="./assets/img/avatar/8.webp"
+                            alt=""
+                            class="avatar"
+                        />
+                        <img
+                            src="./assets/img/avatar/9.webp"
+                            alt=""
+                            class="avatar"
+                        />
+                        <img
+                            src="./assets/img/avatar/10.jpeg"
+                            alt=""
+                            class="avatar"
+                        />
+                    </div>
                 </div>
             </div>
         </main>
