--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             alt="Words learner come here"
                         />
                         <div class="sticky">
-                            <div class="course">
+                            <div class="sticky-course">
                                 <div class="wrap-course">
                                     <div class="book">
                                         <img
