--- a/index.html
+++ b/index.html
@@ -297,69 +297,178 @@
             <!-- feedback -->
             <div class="feedback">
                 <div class="main-content">
-                    <div class="wrap-feedback">
-                        <img
-                            class="icon-quote"
-                            src="./assets/img/icon-quote.svg"
-                            alt="quote"
-                        />
-                        <blockquote>
-                            “They are the best people. And this is the suitable
-                            platform to learn from distance.”
-                        </blockquote>
-                        <p class="info-member">
-                            <span class="name">Ben Foakes,</span>
-                            &nbsp;student.
-                        </p>
-                        <div class="action">
-                            <a href="#!" class="feedback-btn">
-                                <img
-                                    src="./assets/img/icon-back.svg"
-                                    alt="button back"
-                                />
-                            </a>
-                            <a href="#!" class="feedback-btn">
-                                <img
-                                    src="./assets/img/icon-next.svg"
-                                    alt="button next"
-                                />
-                            </a>
+                    <div class="wrap">
+                        <div class="wrap-feedback">
+                            <img
+                                class="icon-quote"
+                                src="./assets/img/icon-quote.svg"
+                                alt="quote"
+                            />
+                            <blockquote>
+                                “They are the best people. And this is the
+                                suitable platform to learn from distance.”
+                            </blockquote>
+                            <p class="info-member">
+                                <span class="name">Ben Foakes,</span>
+                                &nbsp;student.
+                            </p>
+                            <div class="action">
+                                <a href="#!" class="feedback-btn">
+                                    <img
+                                        src="./assets/img/icon-back.svg"
+                                        alt="button back"
+                                    />
+                                </a>
+                                <a href="#!" class="feedback-btn">
+                                    <img
+                                        src="./assets/img/icon-next.svg"
+                                        alt="button next"
+                                    />
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="feedback-avatar">
-                        <img
-                            src="./assets/img/avatar/5.jpeg"
-                            alt=""
-                            class="avatar"
-                        />
-                        <img
-                            src="./assets/img/avatar/6.jpeg"
-                            alt=""
-                            class="avatar"
-                        />
-                        <img
-                            src="./assets/img/avatar/7.jpeg"
-                            alt=""
-                            class="avatar"
-                        />
-                        <img
-                            src="./assets/img/avatar/8.webp"
-                            alt=""
-                            class="avatar"
-                        />
-                        <img
-                            src="./assets/img/avatar/9.webp"
-                            alt=""
-                            class="avatar"
-                        />
-                        <img
-                            src="./assets/img/avatar/10.jpeg"
-                            alt=""
-                            class="avatar"
-                        />
+                        <div class="feedback-avatar">
+                            <img
+                                src="./assets/img/avatar/5.jpeg"
+                                alt=""
+                                class="avatar"
+                            />
+                            <img
+                                src="./assets/img/avatar/6.jpeg"
+                                alt=""
+                                class="avatar"
+                            />
+                            <img
+                                src="./assets/img/avatar/7.jpeg"
+                                alt=""
+                                class="avatar"
+                            />
+                            <img
+                                src="./assets/img/avatar/8.jpeg"
+                                alt=""
+                                class="avatar"
+                            />
+                            <img
+                                src="./assets/img/avatar/9.jpeg"
+                                alt=""
+                                class="avatar"
+                            />
+                            <img
+                                src="./assets/img/avatar/10.jpeg"
+                                alt=""
+                                class="avatar"
+                            />
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- CTA -->
+            <div class="cta">
+                <div class="main-content">
+                    <div class="content">
+                        <h2 class="title-lv2">Ready to Get Admit</h2>
+                        <p class="text-desc">
+                            Create your account and Boost your Career.
+                        </p>
+                    </div>
+                    <a href="#!" class="btn">Get Started</a>
+                </div>
+            </div>
         </main>
+        <!-- footer -->
+        <footer>
+            <div class="footer">
+                <div class="main-content">
+                    <div class="row">
+                        <a class="column" href="#!"
+                            ><img src="./assets/img/Logo.svg" alt="Besnik."
+                        /></a>
+                        <div class="column">
+                            <h3 class="title-footer">Company</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="">About</a>
+                                </li>
+                                <li class="item">
+                                    <a href="">Careers</a>
+                                </li>
+                                <li class="item">
+                                    <a href="">Press</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="title-footer">Team Plans</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="#!">Blog</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Students</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Schoolarships</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="title-footer">Teaching</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="#!">Become a teacher</a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">Teaching academy</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="title-footer">Be social</h3>
+                            <ul class="list">
+                                <li class="item">
+                                    <a href="#!">
+                                        <img
+                                            src="./assets/img/footer/twitter.svg"
+                                            alt="icon"
+                                        />
+                                        <p class="desc">Twitter</p>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">
+                                        <img
+                                            src="./assets/img/footer/facebook.svg"
+                                            alt="icon"
+                                        />
+                                        <p class="desc">Facebook</p>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">
+                                        <img
+                                            src="./assets/img/footer/instagram.svg"
+                                            alt="icon"
+                                        />
+                                        <p class="desc">Instagram</p>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a href="#!">
+                                        <img
+                                            src="./assets/img/footer/linkedin.svg"
+                                            alt="icon"
+                                        />
+                                        <p class="desc">Linkedin</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <p class="text-desc copyright">
+                        © Copyright 2020 by Mayad Ahmed. All right reserved.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
